syntax = "proto3";

package api;

option go_package = "/message/interactive";

import "idl/api/model.proto";

// Interactive API
message FavoriteActionRequest {
    string token = 1;       // 用户鉴权token
    int64 video_id = 2;     // 视频ID
    int64 action_type = 3;  // 1-点赞，2-取消点赞
}

message FavoriteActionResponse{
    int64 status_code = 1;  // 状态码，0-成功，其他值-失败
    string status_msg = 2;  // 返回状态描述
}

message FavoriteListRequest {
    int64 user_id = 1;  // 用户ID
    string token = 2;   // 用户鉴权token
}

message FavoriteListResponse {
    int64 status_code = 1;          // 状态码，0-成功，其他值-失败
    string status_msg = 2;          // 返回状态描述
    repeated Video video_list = 3;  // 用户点赞视频列表
}

message CommentActionRequest {
    string token = 1;           // 用户鉴权token
    int64 video_id = 2;         // 视频ID
    int64 action_type = 3;      // 1-发布评论，2-删除评论
    string comment_text = 4;    // 用户填写的评论内容，在action_type=1的时候使用
    int64 comment_id = 5;       // 要删除的评论ID，在action_type=2的时候使用
}

message CommentActionResponse {
    int64 status_code = 1;  // 状态码，0-成功，其他值-失败
    string status_msg = 2;  // 返回状态描述
    Comment comment = 3;    // 评论成功返回评论内容，不需要重新拉取整个列表
}

message CommentListRequest {
    string token = 1;   // 用户鉴权token
    int64 video_id = 2; // 视频ID
}

message CommentListResponse {
    int64 status_code = 1;              // 状态码，0-成功，其他值-失败
    string status_msg = 2;              // 返回状态描述
    repeated Comment comment_list = 3;  // 评论列表
}